--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/ui": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -32,6 +34,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^11.18.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.472.0",
     "next": "15.1.4",
     "next-sitemap": "^4.2.3",
