--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "generate:types": "payload generate:types"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/live-preview-react": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/plugin-form-builder": "latest",
-    "@payloadcms/plugin-nested-docs": "latest",
-    "@payloadcms/plugin-redirects": "latest",
-    "@payloadcms/plugin-search": "latest",
-    "@payloadcms/plugin-seo": "latest",
-    "@payloadcms/richtext-lexical": "latest",
-    "@payloadcms/ui": "latest",
+    "@payloadcms/db-mongodb": "3.20.0",
+    "@payloadcms/live-preview-react": "3.20.0",
+    "@payloadcms/next": "3.20.0",
+    "@payloadcms/payload-cloud": "3.20.0",
+    "@payloadcms/plugin-cloud-storage": "^3.20.0",
+    "@payloadcms/plugin-form-builder": "3.20.0",
+    "@payloadcms/plugin-nested-docs": "3.20.0",
+    "@payloadcms/plugin-redirects": "3.20.0",
+    "@payloadcms/plugin-search": "3.20.0",
+    "@payloadcms/plugin-seo": "3.20.0",
+    "@payloadcms/richtext-lexical": "3.20.0",
+    "@payloadcms/ui": "3.20.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -39,7 +39,7 @@
     "lucide-react": "^0.472.0",
     "next": "15.1.4",
     "next-sitemap": "^4.2.3",
-    "payload": "latest",
+    "payload": "3.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
