--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-env": "^7.0.3",
     "framer-motion": "^11.18.1",
     "jose": "^5.9.6",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.472.0",
     "next": "15.1.4",
     "next-sitemap": "^4.2.3",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
